fix backdrop bug on safari

--- a/style.sass
+++ b/style.sass
@@ -74,6 +74,7 @@ nav span
     overflow: hidden
     transition: all 0.5s ease-in
     backdrop-filter: blur(20px)
+    -webkit-backdrop-filter: blur(20px)
 nav.active
     position: absolute
     top: 100px
@@ -102,6 +103,7 @@ nav.active a:not(:last-child)
         padding: 39px 48px
         background-color: rgba(255, 255, 255, 0.04)
         backdrop-filter: blur(20px)
+        -webkit-backdrop-filter: blur(20px)
     nav a:not(:last-child) 
         margin-right: 37px
     nav a
@@ -116,6 +118,7 @@ nav.active a:not(:last-child)
         background: white
         background: linear-gradient(to right, rgba(255,255,255,0) 42%, rgba(255,255,255,0.04) 40px, rgba(255,255,255,0.04))
         backdrop-filter: blur(20px)
+        -webkit-backdrop-filter: blur(20px)
     header .container
         padding-left: 0
         padding-right: 0
@@ -125,6 +128,7 @@ nav.active a:not(:last-child)
         padding: 39px 0
         background-color: transparent
         backdrop-filter: none
+        -webkit-backdrop-filter: none
     nav span 
         display: inline
     nav a:not(:last-child) 
